Add Credit Karma

--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -32,7 +32,7 @@
   </mat-tab>
   <mat-tab label="Full Stack Agile Developer">
     <mat-card>
-      <mat-card-title class= "secondary">The Hartford: 2020-present</mat-card-title>
+      <mat-card-title class= "secondary">The Hartford: 2020-2021</mat-card-title>
       <picture class="center align-center">
         <img src="../../assets/img/hartford.png" alt="aws">
       </picture>
@@ -42,6 +42,21 @@
         <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Spearheaded dynamically formed web-pages based on complex api responses</div></mat-list-item>
         <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Adapted AWS tools to extract data and automate API workflow for automated claims</div></mat-list-item>
         <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Lead tech meetings to share cross-learning opportunities</div></mat-list-item>
+      </mat-list>
+    </mat-card>
+  </mat-tab>
+  <mat-tab label="SWE">
+    <mat-card>
+      <mat-card-title class= "secondary">Credit Karma: 2021-present</mat-card-title>
+      <picture class="center align-center">
+        <img src="../../assets/img/Credit Karma.png" alt="aws">
+      </picture>
+      <mat-divider></mat-divider>
+      <mat-list>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Architected and wrote code that unlocked prime partner onboardings including: OAuth v2, Capabilities for redirecting members on errors, Dynamically fetched and hydrated urls for redirection</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Lead Fastest Onboarding ever at 1.5 months (previous fastest onboarding 5 months)</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Chosen to be lead engineer for largest and most delicate onboarding in team history</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Key Contributor to process improvement, observability, and code refactoring efforts</div></mat-list-item>
       </mat-list>
     </mat-card>
   </mat-tab>
